Flagship Section - Scrollbar Fix
Fix scrollbar in flagships section. Styling for scrollbar was applied to
flex container, not actual scrolling element (container)

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,8 +20,8 @@
 
 :root {
   --scrollbarBG: rgba(207, 216, 220, 0.25);
-  --thumbBG: rgba(190, 189, 189, 0.75);
-  --thumbBGTransparent: rgba(144, 164, 174, 0.25);
+  --thumbBG: rgba(207, 204, 204, 0.75);
+  --thumbBGTransparent: rgba(188, 194, 197, 0.534);
   --siteBG: rgb(97, 97, 97);
   --beerCardColor: rgb(190, 190, 190, 0.75);
 }
@@ -221,32 +221,32 @@ h2 {
   overflow: auto;
   display: flex;
   flex: 1;
+  scrollbar-width: thin;
+  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
 }
 
 /* OVERFLOWING FLEXBOX WRAPPER */
 .flex-overflow-wrapper {
   display: flex;
   min-width: min-content;
-  /* Scrollbar */
-  scrollbar-width: thin;
-  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
   width: 100%;
+  /* Scrollbar */
 }
 
 /* Overflowing flexbox horizontal scrollbar*/
-.flex-overflow-wrapper::-webkit-scrollbar {
+.container--beer-cards-flagship::-webkit-scrollbar {
   height: 15px;
 }
 
-.flex-overflow-wrapper::-webkit-scrollbar-thumb:hover {
+.container--beer-cards-flagship::-webkit-scrollbar-thumb:hover {
   background-color: var(--thumbBG);
 }
 
-.flex-overflow-wrapper::-webkit-scrollbar-track {
+.container--beer-cards-flagship::-webkit-scrollbar-track {
   background: var(--scrollbarBG);
   border-radius: 6px;
 }
-.flex-overflow-wrapper::-webkit-scrollbar-thumb {
+.container--beer-cards-flagship::-webkit-scrollbar-thumb {
   background-color: var(--thumbBGTransparent);
   border-radius: 6px;
 }
